# cursor_hackathon

./: .autofix-doctor-probe-1774551350519.txt  .autofix-doctor-probe-1774551484646.txt  .autofix-last-failed.patch  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/autofix_cli/: config.py  fixer.py  github_ops.py  main.py  shell.py
src/autofix_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
