[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autofix-cli"
version = "0.1.0"
description = "CLI that auto-fixes GitHub issues and opens pull requests."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
autofix = "autofix_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
